# svc-gis

./: .cspell.project-words.txt  .env.base  .env.repo  .terraform_init  .tofu_init  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docker-compose-base.yml  docker-compose.yml  log4rs.yaml
.compose/aetheric-svc/: rust-test.yaml  test-server.yaml
client-grpc/: Cargo.toml  README.md
client-grpc/examples/: grpc.rs
client-grpc/src/: client.rs  grpc.rs  lib.rs  prelude.rs  service.rs
client-grpc/tests/: integration_test.rs
common/: types.rs
docs/: conops.md  icd.md  sdd.md
proto/: grpc.proto
scripts/: all-geometries.sql  astar.sql  collision-detection.sql  init.sql  postgis-init.sh
server/: Cargo.toml  README.md  build.rs
server/src/: config.rs  lib.rs  main.rs  test_util.rs
server/src/cache/: mod.rs  pool.rs
server/src/grpc/: client.rs  macros.rs  server.rs
server/src/postgis/: README.md  aircraft.rs  best_path.rs  flight.rs  macros.rs  mod.rs  nearest.rs  node.rs  nofly.rs  pool.rs  routing.rs  utils.rs  vertiport.rs  waypoint.rs  zone.rs
