[workspace]
members  = ["server", "client-grpc"]
resolver = "2"

[workspace.package]
edition      = "2021"
homepage     = "https://www.aetheric.nl"
keywords     = ["vtol", "server", "gis"]                 # max 5
license-file = "LICENSE"
repository   = "https://github.com/aetheric-oss/svc-gis"

categories = [
  "aerospace::drones",
  "aerospace::protocols",
] # max 5 -- https://crates.io/category_slugs
