[package]
description = "Arrow GIS server gRPC client"
name        = "svc-gis-client-grpc"
version     = "0.0.1-develop.4"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
chrono      = "0.4"
num-derive  = "0.3"
num-traits  = "0.2"
prost       = "0.11"
prost-types = "0.11"
tonic       = "0.8"
uuid        = { version = "1.3", features = ["v4"] }

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "v0.1.1-develop.2"

[dev-dependencies]
rand  = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "grpc"
