[package]
description = "Arrow GIS server gRPC client"
name        = "svc-gis-client-grpc"
version     = "0.0.1-develop.5"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
dev       = ["mock", "tokio"]
test_util = ["mock", "stub_backends"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = []
# Will use a stubbed server connection, only use for tests!
stub_backends = [
  "svc-gis/stub_server",
  "lib-common/grpc_mock",
  "tower",
  "tokio",
  "tokio-postgres",
  "deadpool-postgres",
]
# Will implement stub functions for the client, only use for tests!
stub_client = ["svc-gis"]

[dependencies]
cfg-if            = "1.0"
chrono            = "0.4"
deadpool-postgres = { version = "0.10", optional = true }
log               = { version = "0.4" }
num-derive        = "0.3"
num-traits        = "0.2"
prost             = "0.11"
prost-types       = "0.11"
svc-gis           = { path = "../server", optional = true }
tokio-postgres    = { version = "0.7", optional = true }
tonic             = "0.8"
tower             = { version = "0.4", optional = true }
uuid              = { version = "1.3", features = ["v4"] }


[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "v0.1.1-develop.2"

[dev-dependencies]
rand = "0.8"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
optional = true
version  = "1.28"

# Make sure we enable the 'mock_services' features when running tests
[dev-dependencies.svc-gis-client-grpc]
features = ["dev"]
path     = "."

[[example]]
name = "grpc"
