[package]
description = "Arrow svc-gis gRPC server"
name        = "svc-gis"
version     = "0.0.1-develop.6"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
default          = []
dev              = ["mock"]
test_util        = ["mock", "stub_backends"]
vendored-openssl = ["openssl/vendored"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = []
# Will use a stubbed backend connection, only use for tests!
stub_backends = []
# Will implement stub functions for the server, only use for tests!
stub_server = ["test_util"]
# Only added to support client-grpc feature when running tests
stub_client = ["stub_backends"]

[dependencies]
anyhow              = "1.0"
axum                = "0.6"
cargo-husky         = "1"
chrono              = { version = "0.4", features = ["serde"] }
clap                = { version = "4.0", features = ["derive"] }
config              = "0.13"
deadpool-postgres   = { version = "0.10", features = ["serde"] }
dotenv              = "0.15"
futures             = "0.3"
hyper               = "0.14"
log                 = "0.4"
native-tls          = "0.2"
num                 = "0.4"
num-derive          = "0.3"
num-traits          = "0.2"
openssl             = "0.10"
postgis             = "0.9"
postgres-native-tls = "0.5"
prost               = "0.11"
prost-build         = "0.11"
prost-types         = "0.11"
rand                = "0.8"
regex               = "1.8"
serde               = "1.0"
serde_json          = "1.0"
tokio               = { version = "1.20", features = ["full"] }
tokio-util          = "0.7"
tonic               = "0.8"
tonic-health        = "0.8"
uuid                = { version = "1.3", features = ["serde", "v4"] }

[dependencies.postgres-types]
features = ["with-uuid-1", "with-geo-types-0_7", "with-chrono-0_4", "derive"]
version  = "0.2"

[dependencies.tokio-postgres]
features = ["with-uuid-1"]
version  = "0.7"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "3.1"

[dependencies.lib-common]
git = "https://github.com/Arrow-air/lib-common.git"
tag = "v0.1.1-develop.2"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[dev-dependencies]
rand = "0.8"

# Make sure we enable the required modules when running tests
[dev-dependencies.svc-gis]
features = ["dev"]
path     = "."

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

[build-dependencies]
tonic-build = "0.8"
